wat basis files/ inhoud

--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <title>ATF Site</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./src/css/style.css">
+
 </head>
 <body>
-    
+<section class="intro">
+    <div class="big">
+        <div class="main">
+            <div class="main-text">
+                <h4>Hello there, we are:</h4>
+                <h2> Alpha Task Force</h2>
+                <p>We are one of the biggest milsim crews on ps4</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
