--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </li>
 
             <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="contact.html" class="nav-link">
                     <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="cat" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-cat fa-w-16 fa-9x">
               <g class="fa-group">
                 <path
@@ -49,7 +49,7 @@
             </li>
 
             <li class="nav-item">
-                <a href="#" class="nav-link" href="contact.html">
+                <a href="#" class="nav-link">
                     <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="alien-monster" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="svg-inline--fa fa-alien-monster fa-w-18 fa-9x">
               <g class="fa-group">
                 <path
